// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FixedGridColumn /> when given a width but not fixed matches its snapshot 1`] = `
<div
  className=
      y-fixedGridColumn
      {
        flex-basis: 100%;
        flex-grow: 1;
        flex-shrink: 1;
        min-width: 0px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridColumn /> when set to fixed and given a width matches its snapshot 1`] = `
<div
  className=
      y-fixedGridColumn
      {
        flex-basis: auto;
        flex-grow: 0;
        flex-shrink: 0;
        min-width: auto;
        width: 150px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridColumn /> when set to fixed matches its snapshot 1`] = `
<div
  className=
      y-fixedGridColumn
      {
        flex-basis: auto;
        flex-grow: 0;
        flex-shrink: 1;
        min-width: auto;
      }
>
  grid content
</div>
`;

exports[`<FixedGridColumn /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-fixedGridColumn
      TEST_CLASSNAME
      {
        flex-basis: 100%;
        flex-grow: 1;
        flex-shrink: 1;
        min-width: 0px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridColumn /> with default options matches its snapshot 1`] = `
<div
  className=
      y-fixedGridColumn
      {
        flex-basis: 100%;
        flex-grow: 1;
        flex-shrink: 1;
        min-width: 0px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridColumn /> with vertical align middle matches its snapshot 1`] = `
<div
  className=
      y-fixedGridColumn
      {
        flex-basis: 100%;
        flex-grow: 1;
        flex-shrink: 1;
        min-width: 0px;
      }
>
  <div
    className=

        {
          align-items: center;
          display: flex;
          height: 100%;
        }
  >
    <div>
      grid content
    </div>
  </div>
</div>
`;
